--- a/public/threejs.css
+++ b/public/threejs.css
@@ -1,6 +1,6 @@
 /* desktop-x-small */
 @media all and (min-width: 0) and (max-width: 480px) {
-  .header-header {
+  canvas {
     height: 65vh;
     width: 100%;
   }
@@ -8,7 +8,7 @@
 
 /* desktop-small */
 @media all and (min-width: 481px) and (max-width: 840px) {
-  .header-header {
+  canvas {
     height: 65vh;
     width: 100%;
   }
@@ -16,7 +16,7 @@
 
 /* desktop-medium */
 @media all and (min-width: 841px) and (max-width: 1280px) {
-  .header-header {
+  canvas {
     height: 75vh;
     width: 100%;
   }
@@ -24,7 +24,7 @@
 
 /* desktop-large */
 @media all and (min-width: 1281px) and (max-width: 1600px) {
-  .header-header {
+  canvas {
     height: 70vh;
     width: 100%;
   }
@@ -32,7 +32,7 @@
 
 /* desktop-xlarge */
 @media all and (min-width: 1601px) {
-  .header-header {
+  canvas {
     height: 75vh;
     width: 100%;
   }
