--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@ body {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
   margin: 0;
   padding: 0;
 }
@@ -15,6 +16,16 @@ label {
   display: block;
 }
 
+.navbar {
+  text-align: center;
+  margin-top: 30px;
+  height: 100px;
+}
+
+.navbar h1 {
+  margin: 0;
+}
+
 nav a {
   display: inline-block;
   margin: 1em;
@@ -23,6 +34,13 @@ nav a {
 form div {
   margin: 1em;
   display: inline-block;
+}
+
+/* HELPERS */
+
+.container {
+  width: 80%;
+  margin: 0 auto;
 }
 
 /* CANVAS */
@@ -65,4 +83,10 @@ form div {
     height: 75vh;
     width: 100%;
   }
+}
+
+/* HOME */
+
+.home {
+  text-align: center;
 }
