--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,12 @@
 body {
   font-family: sans-serif;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   overflow-x: hidden;
   overflow-y: hidden;
   margin: 0;
   padding: 0;
+  background-color: #286cbd;
 }
 
 a {
@@ -14,6 +15,14 @@ a {
 
 label {
   display: block;
+}
+
+h3 {
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 24px;
 }
 
 .navbar {
@@ -66,7 +75,9 @@ form div {
 
 /* HOME */
 .home {
+  margin-top: 5vh;
   text-align: center;
+  color: #eee;
 }
 
 /* SWITCHER */
