--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: hidden;
+}
+
 body {
   font-family: sans-serif;
   height: 100vh;
@@ -69,7 +73,7 @@ form div {
 
 /* HELPERS */
 .container {
-  width: 80%;
+  width: 60%;
   margin: 0 auto;
 }
 
